--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section style="background-color: rgb(230, 231, 234); height: 400px; padding-top: 64px; padding-bottom: 64px;">
     <div id="ContainerCards">
       <div>
-        <h2>Service withoutttttttttttt bureaucracy!</h2>
+        <h2>Service without bureaucracy!</h2>
         <p>Request and track the process in a few steps through the platform.</p>
       </div>
 
